# schedule

./: .gitignore  README.md  app_logic.py  changelog.md  changelog.txt  command_help.md  config.json  cutils.py  datecommand.py  datepicker.py  datepicker_exp.py  dmcp.py  fixme.txt  git_releaser.bat  guinput.py  ical_share.py  inputval.py  instructions.md  main.py  main.pyw  main.spec  mkdocs.yml  modeus.py  news.old.txt  news.py  open_commandline.bat  people.json  pyproject.toml  readme.md  readme.txt  release.md  requirements.txt  schedparser.py  schedule.py  schedule.spec  schedule1.spec  schedule2.spec  schedule_setup.iss  screenreader.py  test_everything.py  (+1 more)
autoupdate/: sfx.py  sfx_config.txt  update.py  version.py  wxupdate.py
coursework/: coursework.md  План курсовой.md
docs/: index.md
parsers/: events.py  mess.py  people.py  russian_date.py
schedule/: modeus.py  schedule.py
schedule/parsers/: events.py  mess.py  people.py  russian_date.py
web/: index.html
